--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 .nav a:hover {
     text-decoration: none;
     font-weight: bold;
-    color: #fff;
+    color: #ffffff;
 }
 .nav li {
     display: inline-block;
