--- a/style.css
+++ b/style.css
@@ -30,7 +30,11 @@ body {
 .nav li {
     display: inline-block;
 }
+h1 {
+    font-family: 'Varela Round', sans-serif;
+    font-size: 2.5em;
+}
 p {
     font-family: 'Varela Round', sans-serif;
-    font-size: 2em;
+    font-size: 1.5em;
 }
