--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 .nav li {
     display: inline-block;
 }
-h1 {
+header p {
     font-family: 'Varela Round', sans-serif;
     font-size: 2.5em;
 }
